syntax = "proto3";

service NoteService {
  rpc ListAllNotes (Empty) returns (NotesList) {};
  rpc GetNote (NoteId) returns (Note) {};
  rpc AddNote (NewNote) returns (Note) {};
  rpc EditNote (Note) returns (Note) {};
  rpc DeleteNote (NoteId) returns (Empty) {};
}

message Empty {}

message Note {
  string id = 1;
  string title = 2;
  string content = 3;
}

message NewNote {
  string title = 1;
  string content = 2;
}

message NoteId {
  string id = 1;
}

message NotesList {
  repeated Note notes = 1;
}